--- a/index.qmd
+++ b/index.qmd
@@ -20,6 +20,4 @@ University of California, Los Angeles \| BS in Statistics and Data Science \| Se
 
 ## Experience
 
-Wengo Analytics \| Head Data Scientist \| April 2018 - present
-
-GeoScynce \| Chief Analyst \| Spet 2012 - April 2018
+AmTech Servic \| Intern \| June 2024 - Sept 2024
